--- a/AVEncoderDecoder.csproj
+++ b/AVEncoderDecoder.csproj
@@ -4,9 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="output\" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<Folder Include="Output\" />
+	</ItemGroup>
 </Project>
